--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -177,7 +177,7 @@ p {
 .element-6 img {
 	position: absolute;
 	z-index: 30;
-	width: 20%;
+	width: 30%;
 	height: auto;
 	top: 27%;
 	right: 50%;
@@ -203,3 +203,81 @@ p {
 }
 
 
+
+
+
+
+@media (max-width: 600px) {
+	.element-2 img {
+	position: absolute;
+	z-index: 60;
+	width: 53%;
+	height: auto;
+	right: 24%;
+	top: 56%;
+	animation: vorne 3s 2s linear 1;
+}
+
+.element-3 img {
+	position: absolute;
+	z-index: 20;
+	width: 53%;
+	height: auto;
+	bottom: 2%;
+	right: 12%;
+	animation: vorne 3s 12s linear 1;
+}
+
+.element-4 img {
+	position: absolute;
+	z-index: 40;
+	width: 58%;
+	height: auto;
+	top: 4%;
+	right: 13%;
+	animation: vorne 3s 22s linear 1;
+}
+
+.element-5 img {
+	position: absolute;
+	z-index: 50;
+	width: 35%;
+	height: auto;
+	left: 7%;
+	bottom: 14%;
+	animation: vorne 3s 32s linear 1;
+}
+
+.element-6 img {
+	position: absolute;
+	z-index: 30;
+	width: 43%;
+	height: auto;
+	top: 27%;
+	right: 56%;
+	animation: vorne 3s 42s linear 1;
+}
+
+.element-7 img {
+	position: absolute;
+	z-index: 70;
+	width: 43%;
+	height: auto;
+	top: 38%;
+	left: 53%;
+	animation: vorne 3s 52s linear 1;
+}
+
+.element-8 img {
+	position: absolute;
+	z-index: 80;
+	width: 45%;
+	height: auto;
+	left: 27%;
+	top: 5%;
+	animation: vorne 3s 62s linear 1;
+}
+
+
+
+}
